--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
-// Place your settings in this file to overwrite the default settings
 {
+    "python.pythonPath": "C:\\Users\\Anders\\Anaconda3",
     "workbench.colorTheme": "Visual Studio Light",
     "extensions.ignoreRecommendations": false
 }
