Add voice commandsfor navigating by delimiter, update settings

--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,7 @@
 {
     "python.pythonPath": "C:\\Users\\Anders\\Anaconda3",
     "workbench.colorTheme": "Visual Studio Light",
-    "extensions.ignoreRecommendations": false
+    "extensions.ignoreRecommendations": false,
+    "workbench.startupEditor": "newUntitledFile",
+    "editor.minimap.enabled": false
 }
